Add isInUse() method in trailer entity, change endpoint to manage trailers
